--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.3.5",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.package-manager-ui": "2.2.0",
-    "com.unity.purchasing": "2.0.3",
-    "com.unity.test-framework": "1.1.18",
-    "com.unity.textmeshpro": "2.1.3",
-    "com.unity.timeline": "1.2.17",
+    "com.unity.ads": "3.7.5",
+    "com.unity.analytics": "3.6.11",
+    "com.unity.collab-proxy": "1.15.15",
+    "com.unity.ext.nunit": "1.0.6",
+    "com.unity.ide.rider": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.purchasing": "4.0.3",
+    "com.unity.test-framework": "1.1.29",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
