--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "com.unity.analytics": "3.6.12",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.analytics": "3.8.1",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.ext.nunit": "1.0.6",
-    "com.unity.ide.rider": "3.0.13",
-    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
