--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/mjlinane/Documents/unity-projects/unity-create-with-code-particles-animations/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/mjlinane/OneDrive - oldrochester.org/Documents/unity-projects-game-design-1/unity-create-with-code-particles-animations/WebGL Builds;C:/Users/mjlinane/Documents/unity-projects/unity-create-with-code-particles-animations/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
